# lab6

./: .gitignore  CMakeLists.txt  Lab6.sln
Lab6/: Lab6.vcxproj  Lab6.vcxproj.filters  ObjectRecognition.cpp  ObjectRecognition.h  ObjectTracker.cpp  ObjectTracking.cpp  ObjectTracking.h  main.cpp
Lab6/x64/Debug/: objectrecognition.new.obj.enc  vc142.idb
Lab6/x64/Debug/Lab6.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lab6.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: ObjectTracker.h  ObjectTracking.h  PanoramicImage.h
src/: ObjectTracker.cpp  ObjectTracking.cpp  PanoramicImage.cpp  main.cpp  panoramic_utils.cpp
x64/Debug/: Lab6.ilk
